Adding Grafana + Open Telemetry